Fixed text align of date picker range

--- a/src/components/date_picker/_date_picker_range.scss
+++ b/src/components/date_picker/_date_picker_range.scss
@@ -20,6 +20,12 @@
   .euiDatePicker {
     box-shadow: none !important; // including all states
     text-align: center;
+
+    .euiDatePicker,
+    .react-datepicker-popper {
+      // set any subsequent children and popper back to left align
+      text-align: left;
+    }
   }
 
   &--inGroup {
